<resources>
    <string name="app_name">WalletPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User name????</string>
    <string name="user_email">User email???</string>
    <string name="nav_header_desc">Navigation header</string>

    //Menu
    <string name="menu_home">Home</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_developer_contact">Developer contact</string>

    //Create user
    <string name="enter_username">Enter username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_balance">Enter your balance</string>
    <string name="by">BY</string>
    <string name="create">Create</string>
    <string name="not_all_fields_are_filled">Not all fields are filled!</string>
    <string name="data_saved_successfully">"Data saved successfully!"</string>

    //Authorization
    <string name="sign_in">Sign in</string>
    <string name="logged_in">Logged in!</string>
    <string name="invalid_data">Invalid data!</string>

    //Tabs
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>

    //Developer contact
    <string name="message_subject">Message Subject</string>
    <string name="email">Email</string>
    <string name="message_text">Message text</string>
    <string name="a_reply_will_be_sent_to_this_email">A reply will be sent to this email.</string>
    <string name="send">Send</string>
    <string name="choose_email_client">Choose Email Client…</string>
    <string name="fields_filled_out_incorrectly">Fields filled out incorrectly</string>

    //Categories income
    <string name="interest_on_deposit">Interest on deposit</string>
    <string name="business">Business</string>
    <string name="present">Present</string>
    <string name="salary">Salary</string>
    <string name="other">Other</string>

    //Categories expenses
    <string name="car">Car</string>
    <string name="appliances">Appliances</string>
    <string name="children">Children</string>
    <string name="pets">Pets</string>
    <string name="health_and_beauty">Health and beauty</string>
    <string name="mortgages_debts_loans">Mortgages, debts, loans</string>
    <string name="apartment_and_utilities">Apartment and utilities</string>
    <string name="taxes_and_insurance">Taxes and insurance</string>
    <string name="education">Education</string>
    <string name="clothes_and_accessories">Clothes and accessories</string>
    <string name="recreation_and_entertainment">Recreation and entertainment</string>
    <string name="nutrition">Nutrition</string>
    <string name="repair">Repair</string>
    <string name="household_products">Household products</string>
    <string name="transport">Transport</string>
    <string name="hobby">Hobby</string>
    <string name="interior">Interior</string>

    //Settings
    <string name="change_password">Change password</string>
    <string name="change_user">Change user</string>
    <string name="delete_user">Delete user</string>
    <string name="language">Language</string>
    <string name="delete_all_data">Delete all data</string>

    //Error
    <string name="error">Error</string>

    //Accounts
    <string name="total_on_accounts">Total on accounts:</string>
</resources>