<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.merio.walletplus.features.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.merio.walletplus.features.accounts.AccountsFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/nav_charts"
        android:name="com.merio.walletplus.features.charts.ChartsFragment"
        android:label="@string/menu_charts"
        tools:layout="@layout/fragment_charts" />
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.merio.walletplus.features.categories.CategoriesHomeFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_nav_categories_to_expensesFragment"
            app:destination="@id/expensesFragment" />
        <action
            android:id="@+id/action_nav_categories_to_incomeFragment"
            app:destination="@id/incomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.merio.walletplus.features.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_developer_contact"
        android:name="com.merio.walletplus.features.developerContact.DeveloperContactFragment"
        android:label="@string/menu_developer_contact"
        tools:layout="@layout/fragment_developer_contact" />
    <fragment
        android:id="@+id/expensesFragment"
        android:name="com.merio.walletplus.features.categories.expenses.ExpensesFragment"
        android:label="fragment_expenses"
        tools:layout="@layout/fragment_expenses" />
    <fragment
        android:id="@+id/incomeFragment"
        android:name="com.merio.walletplus.features.categories.income.IncomeFragment"
        android:label="fragment_income"
        tools:layout="@layout/fragment_income" />
    <activity
        android:id="@+id/createUserActivity"
        android:name="com.merio.walletplus.features.authorization.createuser.CreateUserActivity"
        android:label="activity_create_user"
        tools:layout="@layout/activity_create_user" />
    <activity
        android:id="@+id/authorizationActivity"
        android:name="com.merio.walletplus.features.authorization.AuthorizationActivity"
        android:label="activity_authorization"
        tools:layout="@layout/activity_authorization" />
</navigation>